

<!--
    app:layout_constraintLeft_toLeftOf="@+id/constraintLayout1"
    app:layout_constraintTop_toBottomOf="@+id/gridLayout1"
-->


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="7"
        android:orientation="horizontal"
        android:rowCount="3"
        android:alignmentMode="alignBounds"
        >

        <Button
            android:id="@+id/button12"
            style="@style/MyButton"
            android:text="@string/b12" />

        <Button
            android:id="@+id/button21"
            style="@style/MyButton"
            android:text="@string/b21" />

        <Button
            android:id="@+id/button23"
            style="@style/MyButton"
            android:text="@string/b23" />

        <Button
            android:id="@+id/button11"
            style="@style/MyButton"
            android:text="@string/b11" />


        <Button
            android:id="@+id/button13"
            style="@style/MyButton"
            android:text="@string/b13" />


        <Button
            android:id="@+id/button22"
            style="@style/MyButton"
            android:text="@string/b22" />


        <Button
            android:id="@+id/button32"
            style="@style/MyButton"
            android:text="@string/b32" />
        <!-- ____________________________________ -->

        <Button
            android:id="@+id/button42"
            style="@style/MyButton"
            android:text="@string/b42"
            android:layout_row="1"
            android:layout_column="0"
            />

        <Button
            android:id="@+id/button51"
            style="@style/MyButton"
            android:text="@string/b51" />
        <Button
            android:id="@+id/button53"
            style="@style/MyButton"
            android:text="@string/b53" />
        <Button
            android:id="@+id/button41"
            style="@style/MyButton"
            android:text="@string/b41"
            />
        <Button
            android:id="@+id/button43"
            style="@style/MyButton"
            android:text="@string/b43"/>
        <Button
            android:id="@+id/button52"
            style="@style/MyButton"
            android:text="@string/b52" />
        <Button
            android:id="@+id/button62"
            style="@style/MyButton"
            android:text="@string/b62" />
        <!-- ____________________________________ -->

        <Button
            android:id="@+id/button31"
            style="@style/MyButton"
            android:text="@string/b31"/>
        <!--android:layout_row="1"
        android:layout_column="1"-->

        <Button
            android:id="@+id/button61"
            style="@style/MyButton"
            android:text="@string/b61"/>
        <!--android:layout_row="3"
android:layout_column="1"-->

        <Button
            android:id="@+id/button33"
            style="@style/MyButton"
            android:text="@string/b33"/>
        <!--android:layout_row="1"
        android:layout_column="2"-->



        <Button
            android:id="@+id/button63"
            style="@style/MyButton"
            android:text="@string/b63"/>
        <!--android:layout_row="3"
android:layout_column="2"-->


        <!-- ____________________________________ -->


        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >-->
        <Button
            android:id="@+id/button71"
            style="@style/MyButton_Yellow"
            android:text="@string/b71" />
        <!--
                <Button
                    android:id="@+id/button72"
                    style="@style/MyButton"
                    android:text="@string/b72"/>-->

        <Button
            android:id="@+id/button73"
            style="@style/MyButton_Yellow"
            android:text="@string/b73"/>
        <!--</LinearLayout>-->
        <!--<SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="127" />-->

        <TextView
            android:id="@+id/button_scaleName"
            style="@style/MyButton"
            android:text="@string/b_scaleName"
            android:gravity="center"
            />
        <!--android:autoSizeTextType="uniform"-->

    </GridLayout>

    <EditText
        android:id="@+id/edtInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hint1"
        android:maxLength="5000"
        android:minLines="1"
        android:maxLines="7"
        android:scrollbars = "vertical"
        android:text=""
        android:inputType="textCapSentences|textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"/>
    <!--
        android:inputType="text"
    -->

</LinearLayout>
